2013-03-28  Roland McGrath  <roland@hack.frob.com>

	* elf/dl-support.c (_dl_phdr): Make pointer to const.
	(_dl_aux_init): Use const in cast when setting it.
	* sysdeps/mach/hurd/i386/init-first.c (init1): Remove superfluous cast.
	* sysdeps/generic/ldsodefs.h [!SHARED] (_dl_phdr): Update decl.
	* csu/libc-tls.c (__libc_setup_tls): Make PHDR pointer to const.

	* sysdeps/generic/ldsodefs.h [!SHARED] (_dl_phdr, _dl_phnum):
	Declare them here.
	* elf/dl-iteratephdr.c [!SHARED] (_dl_phdr, _dl_phnum): Not here.
	* csu/libc-tls.c: Nor here.
	* sysdeps/mach/hurd/i386/init-first.c (init1): Nor here.

	* sysdeps/posix/libc_fatal.c: Don't include <sys/syslog.h>.
	(__libc_message): Never call vsyslog.

2013-03-28  Alan Modra  <amodra@gmail.com>

	* sysdeps/powerpc/powerpc32/start.S (cfi_startproc, cfi_endproc):
	Define as empty.
	* sysdeps/powerpc/powerpc64/start.S (cfi_startproc, cfi_endproc):
	Likewise.

2013-03-28  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>

	[BZ #15214]
	* sysdeps/ieee754/ldbl-128ibm/e_logl.c (__ieee754_logl): Fix spurious
	underflow.
	* sysdeps/powerpc/fpu/libm-test-ulps: Update.

2013-03-28  Siddhesh Poyarekar  <siddhesh@redhat.com>

	[BZ #15304]
	* hesiod/nss_hesiod/hesiod-grp.c (_nss_hesiod_initgroups_dyn):
	Don't add gid passed as argument.

	* sysdeps/ieee-754/dbl-64/e_atan2.c: Reformat.

2013-03-27  Joseph Myers  <joseph@codesourcery.com>

	[BZ #15307]
	* math/k_casinh.c (__kernel_casinh): Handle arguments with
	imaginary part between 1.0 and 1.5 and real part less than 0.5
	specially.
	* math/k_casinhf.c (__kernel_casinhf): Likewise.
	* math/k_casinhl.c (__kernel_casinhl): Likewise.
	* math/libm-test.inc (cacos_test): Add more tests.
	(casin_test): Likewise.
	(casinh_test): Likewise.
	* sysdeps/i386/fpu/libm-test-ulps: Update.
	* sysdeps/x86_64/fpu/libm-test-ulps: Likewise.

2013-03-26  Siddhesh Poyarekar  <siddhesh@redhat.com>

	* sysdeps/ieee754/dbl-64/mpa.c (__acr): Use integral
	constants.
	(norm): Likewise.
	(denorm): Likewise.